import bootstrap from gem

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -1,7 +1,7 @@
   <div class="row">
 
     <div class="col-xs-3">
-      <p id="cand_id" style="display:hidden"><%= @candidate.id %></p>
+      <p id="cand_id" style="display:none"><%= @candidate.id %></p>
       <h1><%= @candidate.name %></h1>
       <ul>
         <li>Twitter: <a href='<%= "https://www.twitter.com/#{@candidate.twitter}" %>'><%= @candidate.twitter %></a></li>
