--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,15 @@
       </button>
       <a class="navbar-brand" href="/">Candidate Sentiment</a>
     </div>
+  
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "About", about_path%></li>
+        <li><%= link_to "Contact", contact_path%></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+
   </div>
 </nav>
 
